fix(list): fix scrollbar props problem (#1929)

--- a/packages/web-vue/components/table/style/index.less
+++ b/packages/web-vue/components/table/style/index.less
@@ -578,6 +578,7 @@
 
   &-header {
     overflow-x: hidden;
+    overflow-y: hidden;
     background-color: @table-color-bg-header-cell;
     scrollbar-color: transparent transparent;
 
